# minimalLinuxCore

./: .aider.chat.history.md  .gitignore  M15-ISSUES.md  PLAN.md  README.md  ai-client.py
.claude/skills/: boos-dev.md
bug-reports/: deepseek-v4-repetition-bug.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
rootfs/: init
rootfs/etc/boos/: capabilities.conf  daemon.conf  debug.conf
rootfs/etc/boos/commands/: caps.cmd  commands.cmd  daemons.cmd  debug.cmd  help.cmd  log.cmd  mock-ai.cmd  poweroff.cmd  process.cmd  prune.cmd  result.cmd  results.cmd  rotate-logs.cmd  shell.cmd  status.cmd  submit.cmd
rootfs/etc/boos/daemons/: gateway.daemon  processor.daemon
scripts/: build-rootfs.sh  build-rust.sh  run-qemu.sh  verify.sh
src/rust/: Cargo.toml
src/rust/src/: config.rs  exec.rs  gateway.rs  log.rs  main.rs  process.rs  registry.rs  shell.rs  submit.rs  supervisor.rs
tests/: integration-test.sh  test-boos-shell-security.sh  verify-shell-fixes.sh
tools/: tcp-client.rs
